# django-search-and-replace

./: LICENSE  MANIFEST.in  README.md  runtests.py  setup.cfg
src/search_and_replace/: apps.py  forms.py  tests.py  views.py
src/search_and_replace/static/search_and_replace/css/: search_and_replace.css
src/search_and_replace/static/search_and_replace/js/: search_and_replace.js
src/search_and_replace/templates/search_and_replace/: search_and_replace.html
