[metadata]
name = django-search-and-replace
version = 0.0.2
description = A search and replace app for django
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RaphaelKimmig/django-search-and-replace
download_url = https://github.com/RaphaelKimmig/django-search-and-replace/archive/v0.0.2.tar.gz
author = Raphael Kimmig
author_email = raphael@ampad.de
keywords =
license = BSD 3-Clause License
classifiers =
    Framework :: Django
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
include_package_data = True
install_requires =
    django ~= 2.1

[options.packages.find]
where = src
